--- a/CuaHangBanPhuKien/app/src/main/AndroidManifest.xml
+++ b/CuaHangBanPhuKien/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Activity.DatHangActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.ChiTietSanPhamActivity"
             android:exported="false" />
         <activity
